fixing issues with react versions

--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "mysql2": "^3.11.5",
     "nodemon": "^3.1.7",
     "python-shell": "^5.0.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
-    "react-markdown": "^9.0.3",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.1.0",
     "react-router-dom": "^7.0.2",
+    "showdown": "^2.1.0",
     "ts-node": "^10.9.2"
   }
 }
