--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,15 @@
     "proxy": "https://localhost:4000/"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.8.1",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.1.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1"
   },
