--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "showdown": "^2.1.0",
     "ts-node": "^10.9.2",
     "validator": "^13.12.0"
+  },
+  "scripts": {
+    "start": "node server/server.js"
   }
 }
