--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "validator": "^13.12.0"
   },
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "postinstall": "npx playwright install"
   }
 }
